RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
RTC6_API void __stdcall n_write_da_x(const UINT CardNo, const UINT x, const UINT Value);
RTC6_API void __stdcall n_set_laser_off_default(const UINT CardNo, const UINT AnalogOut1, const UINT AnalogOut2, const UINT DigitalOut);
RTC6_API void __stdcall n_set_port_default(const UINT CardNo, const UINT Port, const UINT Value);
RTC6_API void __stdcall n_write_io_port(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_write_da_1(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_write_da_2(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall write_io_port_mask(const UINT Value, const UINT Mask);
RTC6_API void __stdcall write_8bit_port(const UINT Value);
RTC6_API UINT __stdcall read_io_port(void);
RTC6_API UINT __stdcall read_io_port_buffer(const UINT Index, UINT* Value, LONG* XPos, LONG* YPos, UINT* Time);
RTC6_API UINT __stdcall get_io_status(void);
RTC6_API UINT __stdcall read_analog_in(void);
RTC6_API void __stdcall write_da_x(const UINT x, const UINT Value);
RTC6_API void __stdcall set_laser_off_default(const UINT AnalogOut1, const UINT AnalogOut2, const UINT DigitalOut);
RTC6_API void __stdcall set_port_default(const UINT Port, const UINT Value);
RTC6_API void __stdcall write_io_port(const UINT Value);
RTC6_API void __stdcall write_da_1(const UINT Value);
RTC6_API void __stdcall write_da_2(const UINT Value);
RTC6_API void __stdcall n_disable_laser(const UINT CardNo);
RTC6_API void __stdcall n_enable_laser(const UINT CardNo);
RTC6_API void __stdcall n_laser_signal_on(const UINT CardNo);
RTC6_API void __stdcall n_laser_signal_off(const UINT CardNo);
RTC6_API void __stdcall n_set_standby(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall n_set_laser_pulses_ctrl(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall n_set_firstpulse_killer(const UINT CardNo, const UINT Length);
RTC6_API void __stdcall n_set_qswitch_delay(const UINT CardNo, const UINT Delay);
RTC6_API void __stdcall n_set_laser_mode(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall n_set_laser_control(const UINT CardNo, const UINT Ctrl);
RTC6_API void __stdcall n_set_laser_pin_out(const UINT CardNo, const UINT Pins);
RTC6_API UINT __stdcall n_get_laser_pin_in(const UINT CardNo);
RTC6_API void __stdcall n_set_softstart_level(const UINT CardNo, const UINT Index, const UINT Level);
RTC6_API void __stdcall n_set_softstart_mode(const UINT CardNo, const UINT Mode, const UINT Number, const UINT Delay);
RTC6_API UINT __stdcall n_set_auto_laser_control(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT Mode, const UINT MinValue, const UINT MaxValue);
RTC6_API UINT __stdcall n_set_auto_laser_params(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API LONG __stdcall n_load_auto_laser_control(const UINT CardNo, const char* Name, const UINT No);
RTC6_API LONG __stdcall n_load_position_control(const UINT CardNo, const char* Name, const UINT No);
RTC6_API void __stdcall n_set_default_pixel(const UINT CardNo, const UINT PulseLength);
RTC6_API void __stdcall n_get_standby(const UINT CardNo, UINT* HalfPeriod, UINT* PulseLength);
RTC6_API void __stdcall n_set_pulse_picking(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_set_pulse_picking_length(const UINT CardNo, const UINT Length);
RTC6_API void __stdcall n_config_laser_signals(const UINT CardNo, const UINT Config);
RTC6_API void __stdcall n_spot_distance_ctrl(const UINT CardNo, const double Dist);
RTC6_API void __stdcall n_set_laser_pulse_form(const UINT CardNo, const UINT Mode, const UINT Length);
RTC6_API void __stdcall n_set_laser_pulse_sync(const UINT CardNo, const UINT Mode, const UINT Delay);
RTC6_API void __stdcall n_set_controlpreview_compensation_ctrl(const UINT CardNo, const UINT ControlPreview, const UINT Mode);
RTC6_API void __stdcall disable_laser(void);
RTC6_API void __stdcall enable_laser(void);
RTC6_API void __stdcall laser_signal_on(void);
RTC6_API void __stdcall laser_signal_off(void);
RTC6_API void __stdcall set_standby(const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall set_laser_pulses_ctrl(const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall set_firstpulse_killer(const UINT Length);
RTC6_API void __stdcall set_qswitch_delay(const UINT Delay);
RTC6_API void __stdcall set_laser_mode(const UINT Mode);
RTC6_API void __stdcall set_laser_control(const UINT Ctrl);
RTC6_API void __stdcall set_laser_pin_out(const UINT Pins);
RTC6_API UINT __stdcall get_laser_pin_in(void);
RTC6_API void __stdcall set_softstart_level(const UINT Index, const UINT Level);
RTC6_API void __stdcall set_softstart_mode(const UINT Mode, const UINT Number, const UINT Delay);
RTC6_API UINT __stdcall set_auto_laser_control(const UINT Ctrl, const UINT Value, const UINT Mode, const UINT MinValue, const UINT MaxValue);
RTC6_API UINT __stdcall set_auto_laser_params(const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API LONG __stdcall load_auto_laser_control(const char* Name, const UINT No);
RTC6_API LONG __stdcall load_position_control(const char* Name, const UINT No);
RTC6_API void __stdcall set_default_pixel(const UINT PulseLength);
RTC6_API void __stdcall get_standby(UINT* HalfPeriod, UINT* PulseLength);
RTC6_API void __stdcall set_pulse_picking(const UINT No);
RTC6_API void __stdcall set_pulse_picking_length(const UINT Length);
RTC6_API void __stdcall config_laser_signals(const UINT Config);
RTC6_API void __stdcall spot_distance_ctrl(const double Dist);
RTC6_API void __stdcall set_laser_pulse_form(const UINT Mode, const UINT Length);
RTC6_API void __stdcall set_laser_pulse_sync(const UINT Mode, const UINT Delay);
RTC6_API void __stdcall set_controlpreview_compensation_ctrl(const UINT ControlPreview, const UINT Mode);
RTC6_API void __stdcall n_set_ext_start_delay(const UINT CardNo, const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall n_set_rot_center(const UINT CardNo, const LONG X, const LONG Y);
RTC6_API void __stdcall n_simulate_encoder(const UINT CardNo, const UINT EncoderNo);
RTC6_API UINT __stdcall n_get_marking_info(const UINT CardNo);
RTC6_API void __stdcall n_set_encoder_speed_ctrl(const UINT CardNo, const UINT EncoderNo, const double Speed, const double Smooth);
RTC6_API void __stdcall n_set_mcbsp_x(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_mcbsp_y(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_mcbsp_rot(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_mcbsp_matrix(const UINT CardNo);
RTC6_API void __stdcall n_set_mcbsp_global_x(const UINT CardNo, const double ScaleX);
RTC6_API void __stdcall n_set_mcbsp_global_y(const UINT CardNo, const double ScaleY);
RTC6_API void __stdcall n_set_mcbsp_global_rot(const UINT CardNo, const double Resolution);
RTC6_API void __stdcall n_set_mcbsp_global_matrix(const UINT CardNo);
RTC6_API void __stdcall n_set_mcbsp_in(const UINT CardNo, const UINT Mode, const double Scale);
RTC6_API void __stdcall n_set_multi_mcbsp_in(const UINT CardNo, const UINT Ctrl, const UINT P, const UINT Mode);
RTC6_API void __stdcall n_set_fly_tracking_error(const UINT CardNo, const UINT TrackingErrorX, const UINT TrackingErrorY);
RTC6_API LONG __stdcall n_load_fly_2d_table(const UINT CardNo, const char* Name, const UINT No);
RTC6_API void __stdcall n_init_fly_2d(const UINT CardNo, const LONG OffsetX, const LONG OffsetY, const UINT No);
RTC6_API void __stdcall n_get_fly_2d_offset(const UINT CardNo, LONG* OffsetX, LONG* OffsetY);
RTC6_API void __stdcall n_get_encoder(const UINT CardNo, LONG* Encoder0, LONG* Encoder1);
RTC6_API void __stdcall n_read_encoder(const UINT CardNo, LONG* Encoder0_1, LONG* Encoder1_1, LONG* Encoder0_2, LONG* Encoder1_2);
RTC6_API LONG __stdcall n_get_mcbsp(const UINT CardNo);
RTC6_API LONG __stdcall n_read_mcbsp(const UINT CardNo, const UINT No);
RTC6_API LONG __stdcall n_read_multi_mcbsp(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_clear_fly_overflow_ctrl(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall set_ext_start_delay(const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall set_rot_center(const LONG X, const LONG Y);
RTC6_API void __stdcall simulate_encoder(const UINT EncoderNo);
RTC6_API UINT __stdcall get_marking_info(void);
RTC6_API void __stdcall set_encoder_speed_ctrl(const UINT EncoderNo, const double Speed, const double Smooth);
RTC6_API void __stdcall set_mcbsp_x(const double ScaleX);
RTC6_API void __stdcall set_mcbsp_y(const double ScaleY);
RTC6_API void __stdcall set_mcbsp_rot(const double Resolution);
RTC6_API void __stdcall set_mcbsp_matrix(void);
RTC6_API void __stdcall set_mcbsp_global_x(const double ScaleX);
RTC6_API void __stdcall set_mcbsp_global_y(const double ScaleY);
RTC6_API void __stdcall set_mcbsp_global_rot(const double Resolution);
RTC6_API void __stdcall set_mcbsp_global_matrix(void);
RTC6_API void __stdcall set_mcbsp_in(const UINT Mode, const double Scale);
RTC6_API void __stdcall set_multi_mcbsp_in(const UINT Ctrl, const UINT P, const UINT Mode);
RTC6_API void __stdcall set_fly_tracking_error(const UINT TrackingErrorX, const UINT TrackingErrorY);
RTC6_API LONG __stdcall load_fly_2d_table(const char* Name, const UINT No);
RTC6_API void __stdcall init_fly_2d(const LONG OffsetX, const LONG OffsetY, const UINT No);
RTC6_API void __stdcall get_fly_2d_offset(LONG* OffsetX, LONG* OffsetY);
RTC6_API void __stdcall get_encoder(LONG* Encoder0, LONG* Encoder1);
RTC6_API void __stdcall read_encoder(LONG* Encoder0_1, LONG* Encoder1_1, LONG* Encoder0_2, LONG* Encoder1_2);
RTC6_API LONG __stdcall get_mcbsp(void);
RTC6_API LONG __stdcall read_mcbsp(const UINT No);
RTC6_API LONG __stdcall read_multi_mcbsp(const UINT No);
RTC6_API void __stdcall clear_fly_overflow_ctrl(const UINT Mode);
RTC6_API double __stdcall n_get_time(const UINT CardNo);
RTC6_API double __stdcall n_get_lap_time(const UINT CardNo);
RTC6_API void __stdcall n_measurement_status(const UINT CardNo, UINT* Busy, UINT* Pos);