RTC6/RTC6 Files/Windows/RTC6Import.pas

procedure n_write_da_x(CardNo: LongWord; x: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_off_default(CardNo: LongWord; AnalogOut1: LongWord; AnalogOut2: LongWord; DigitalOut: LongWord); stdcall; external RTC6DLL;
procedure n_set_port_default(CardNo: LongWord; Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_io_port(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_da_1(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_da_2(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure write_io_port_mask(Value: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure write_8bit_port(Value: LongWord); stdcall; external RTC6DLL;
function  read_io_port(): LongWord; stdcall; external RTC6DLL;
function  read_io_port_buffer(Index: LongWord; var Value: LongWord; var XPos: LongInt; var YPos: LongInt; var Time: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_io_status(): LongWord; stdcall; external RTC6DLL;
function  read_analog_in(): LongWord; stdcall; external RTC6DLL;
procedure write_da_x(x: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure set_laser_off_default(AnalogOut1: LongWord; AnalogOut2: LongWord; DigitalOut: LongWord); stdcall; external RTC6DLL;
procedure set_port_default(Port: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure write_io_port(Value: LongWord); stdcall; external RTC6DLL;
procedure write_da_1(Value: LongWord); stdcall; external RTC6DLL;
procedure write_da_2(Value: LongWord); stdcall; external RTC6DLL;
procedure n_disable_laser(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_enable_laser(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_laser_signal_on(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_laser_signal_off(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_standby(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_pulses_ctrl(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_firstpulse_killer(CardNo: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure n_set_qswitch_delay(CardNo: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_mode(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_control(CardNo: LongWord; Ctrl: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_pin_out(CardNo: LongWord; Pins: LongWord); stdcall; external RTC6DLL;
function  n_get_laser_pin_in(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_set_softstart_level(CardNo: LongWord; Index: LongWord; Level: LongWord); stdcall; external RTC6DLL;
procedure n_set_softstart_mode(CardNo: LongWord; Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
function  n_set_auto_laser_control(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; Mode: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_set_auto_laser_params(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_auto_laser_control(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
function  n_load_position_control(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_set_default_pixel(CardNo: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_get_standby(CardNo: LongWord; var HalfPeriod: LongWord; var PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_pulse_picking(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
procedure n_set_pulse_picking_length(CardNo: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure n_config_laser_signals(CardNo: LongWord; Config: LongWord); stdcall; external RTC6DLL;
procedure n_spot_distance_ctrl(CardNo: LongWord; Dist: Double); stdcall; external RTC6DLL;
procedure n_set_laser_pulse_form(CardNo: LongWord; Mode: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_pulse_sync(CardNo: LongWord; Mode: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure n_set_controlpreview_compensation_ctrl(CardNo: LongWord; ControlPreview: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure disable_laser(); stdcall; external RTC6DLL;
procedure enable_laser(); stdcall; external RTC6DLL;
procedure laser_signal_on(); stdcall; external RTC6DLL;
procedure laser_signal_off(); stdcall; external RTC6DLL;
procedure set_standby(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_laser_pulses_ctrl(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_firstpulse_killer(Length: LongWord); stdcall; external RTC6DLL;
procedure set_qswitch_delay(Delay: LongWord); stdcall; external RTC6DLL;
procedure set_laser_mode(Mode: LongWord); stdcall; external RTC6DLL;
procedure set_laser_control(Ctrl: LongWord); stdcall; external RTC6DLL;
procedure set_laser_pin_out(Pins: LongWord); stdcall; external RTC6DLL;
function  get_laser_pin_in(): LongWord; stdcall; external RTC6DLL;
procedure set_softstart_level(Index: LongWord; Level: LongWord); stdcall; external RTC6DLL;
procedure set_softstart_mode(Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
function  set_auto_laser_control(Ctrl: LongWord; Value: LongWord; Mode: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC6DLL;
function  set_auto_laser_params(Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC6DLL;
function  load_auto_laser_control(Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
function  load_position_control(Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure set_default_pixel(PulseLength: LongWord); stdcall; external RTC6DLL;
procedure get_standby(var HalfPeriod: LongWord; var PulseLength: LongWord); stdcall; external RTC6DLL;
procedure set_pulse_picking(No: LongWord); stdcall; external RTC6DLL;
procedure set_pulse_picking_length(Length: LongWord); stdcall; external RTC6DLL;
procedure config_laser_signals(Config: LongWord); stdcall; external RTC6DLL;
procedure spot_distance_ctrl(Dist: Double); stdcall; external RTC6DLL;
procedure set_laser_pulse_form(Mode: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure set_laser_pulse_sync(Mode: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure set_controlpreview_compensation_ctrl(ControlPreview: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_ext_start_delay(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_rot_center(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure n_simulate_encoder(CardNo: LongWord; EncoderNo: LongWord); stdcall; external RTC6DLL;
function  n_get_marking_info(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_set_encoder_speed_ctrl(CardNo: LongWord; EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_x(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_y(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_rot(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_matrix(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_x(CardNo: LongWord; ScaleX: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_y(CardNo: LongWord; ScaleY: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_rot(CardNo: LongWord; Resolution: Double); stdcall; external RTC6DLL;
procedure n_set_mcbsp_global_matrix(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_in(CardNo: LongWord; Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure n_set_multi_mcbsp_in(CardNo: LongWord; Ctrl: LongWord; P: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_fly_tracking_error(CardNo: LongWord; TrackingErrorX: LongWord; TrackingErrorY: LongWord); stdcall; external RTC6DLL;
function  n_load_fly_2d_table(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_init_fly_2d(CardNo: LongWord; OffsetX: LongInt; OffsetY: LongInt; No: LongWord); stdcall; external RTC6DLL;
procedure n_get_fly_2d_offset(CardNo: LongWord; var OffsetX: LongInt; var OffsetY: LongInt); stdcall; external RTC6DLL;
procedure n_get_encoder(CardNo: LongWord; var Encoder0: LongInt; var Encoder1: LongInt); stdcall; external RTC6DLL;
procedure n_read_encoder(CardNo: LongWord; var Encoder0_1: LongInt; var Encoder1_1: LongInt; var Encoder0_2: LongInt; var Encoder1_2: LongInt); stdcall; external RTC6DLL;
function  n_get_mcbsp(CardNo: LongWord): LongInt; stdcall; external RTC6DLL;
function  n_read_mcbsp(CardNo: LongWord; No: LongWord): LongInt; stdcall; external RTC6DLL;
function  n_read_multi_mcbsp(CardNo: LongWord; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_clear_fly_overflow_ctrl(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure set_ext_start_delay(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure set_rot_center(X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure simulate_encoder(EncoderNo: LongWord); stdcall; external RTC6DLL;
function  get_marking_info(): LongWord; stdcall; external RTC6DLL;
procedure set_encoder_speed_ctrl(EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_x(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_y(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_rot(Resolution: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_matrix(); stdcall; external RTC6DLL;
procedure set_mcbsp_global_x(ScaleX: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_y(ScaleY: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_rot(Resolution: Double); stdcall; external RTC6DLL;
procedure set_mcbsp_global_matrix(); stdcall; external RTC6DLL;
procedure set_mcbsp_in(Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure set_multi_mcbsp_in(Ctrl: LongWord; P: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure set_fly_tracking_error(TrackingErrorX: LongWord; TrackingErrorY: LongWord); stdcall; external RTC6DLL;
function  load_fly_2d_table(Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure init_fly_2d(OffsetX: LongInt; OffsetY: LongInt; No: LongWord); stdcall; external RTC6DLL;
procedure get_fly_2d_offset(var OffsetX: LongInt; var OffsetY: LongInt); stdcall; external RTC6DLL;
procedure get_encoder(var Encoder0: LongInt; var Encoder1: LongInt); stdcall; external RTC6DLL;
procedure read_encoder(var Encoder0_1: LongInt; var Encoder1_1: LongInt; var Encoder0_2: LongInt; var Encoder1_2: LongInt); stdcall; external RTC6DLL;
function  get_mcbsp(): LongInt; stdcall; external RTC6DLL;
function  read_mcbsp(No: LongWord): LongInt; stdcall; external RTC6DLL;
function  read_multi_mcbsp(No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure clear_fly_overflow_ctrl(Mode: LongWord); stdcall; external RTC6DLL;
function  n_get_time(CardNo: LongWord): Double; stdcall; external RTC6DLL;
function  n_get_lap_time(CardNo: LongWord): Double; stdcall; external RTC6DLL;
procedure n_measurement_status(CardNo: LongWord; var Busy: LongWord; var Pos: LongWord); stdcall; external RTC6DLL;
